# Parallel-Programing

./: .gitignore  CMakeLists.txt  README.md  hbd_omp.c  hello1.2.cu  hello1.cu  hello2.1.cu  hello2.2.cu  hello2.3.cu  hello_omp.c  lab2-ej1.c  lab2-ej2-v1.c  lab2-ej2-v2.c  lab2-ej2-v3.c  mpi_hello.c  mpi_hello2.c  mpi_hello3.c  remann_omp2.c  riemann.c  riemann_omp_nocrit.c
